--- a/package.json
+++ b/package.json
@@ -18,14 +18,23 @@
   ],
   "main": "index.js",
   "bin": {
-    "prismata-replay-parser": "bin/prismataReplayParser.js"
+    "prismata-replay-parser": "lib/bin/prismataReplayParser.js"
   },
   "scripts": {
+    "lint": "tslint --project .",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "minimist": "^1.2.0",
     "timsort": "^0.3.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/minimist": "^1.2.0",
+    "@types/node": "^10.12.21",
+    "@types/timsort": "^0.3.0",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.1"
+  }
 }
