--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,16 @@
     "target": "es2017",
     "module": "commonjs",
     "lib": ["esnext"],
-    "allowJs": true,
-    //"declaration": true,
-    //"declarationMap": true,
+    "declaration": true,
+    "declarationMap": true,
     "sourceMap": true,
     "outDir": "./lib/",
-    "strict": false,
+    "strict": true,
     "noImplicitAny": false,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noImplicitReturns": true,
-    // "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true
   },
   "include": [
