--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/minimist": "^1.2.0",
     "@types/node": "^10.12.21",
+    "@types/source-map-support": "^0.4.1",
     "@types/timsort": "^0.3.0",
     "tslint": "^5.12.1",
     "typescript": "^3.3.1"
