Convert to TypeScript files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     //"declarationMap": true,
     "sourceMap": true,
     "outDir": "./lib/",
-    "strict": true,
+    "strict": false,
+    "noImplicitAny": false,
     // "noUnusedLocals": true,
     // "noUnusedParameters": true,
     // "noImplicitReturns": true,
