Use JSON schema to validate replay data.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "ajv": "^6.8.1",
     "minimist": "^1.2.0",
     "source-map-support": "^0.5.10",
     "timsort": "^0.3.0"
